--- a/pdfgen-front/package.json
+++ b/pdfgen-front/package.json
@@ -7,8 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "ace-builds": "^1.35.4",
     "jsoneditor": "^10.1.0",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
