--- a/pdfgen-front/package.json
+++ b/pdfgen-front/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "ace-builds": "^1.35.4",
     "jsoneditor": "^10.1.0",
+    "pinia": "^2.2.1",
     "vue": "^3.0.0",
     "vue-router": "^4.4.3"
   },
