--- a/pdfgen-front/.prettierrc.json
+++ b/pdfgen-front/.prettierrc.json
@@ -5,5 +5,6 @@
   "tabWidth": 2,
   "singleQuote": false,
   "printWidth": 80,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "htmlWhitespaceSensitivity": "ignore"
 }
