--- a/pdfgen-front/package.json
+++ b/pdfgen-front/package.json
@@ -14,7 +14,8 @@
     "jsoneditor": "^10.1.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
