--- a/pdfgen-front/package.json
+++ b/pdfgen-front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@vueuse/head": "^2.0.0",
     "ace-builds": "^1.35.4",
     "jsoneditor": "^10.1.0",
     "pinia": "^2.1.7",
