--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
-  "dependencies": {
-    "vue-cookies": "^1.8.4"
-  }
+  "name": "hastecv-fullstack",
+  "version": "1.0.0",
+  "scripts": {
+    "heroku-postbuild": "cd pdfgen-front && npm install && npm run build && cp -R dist ../pdfgen-back/"
+  },
+  "engines": {
+    "node": "14.x"
+  },
+  "dependencies": {}
 }
