--- a/pdfgen-front/package.json
+++ b/pdfgen-front/package.json
@@ -12,10 +12,17 @@
     "@formkit/auto-animate": "^0.8.2",
     "@vueuse/head": "^2.0.0",
     "ace-builds": "^1.35.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "gsap": "^3.12.5",
     "jsoneditor": "^10.1.0",
+    "lucide-vue-next": "^0.545.0",
+    "pdfjs-dist": "^5.4.296",
     "pinia": "^2.1.7",
+    "radix-vue": "^1.9.17",
+    "tailwind-merge": "^3.3.1",
     "vue": "^3.4.29",
+    "vue-pdf-embed": "^2.1.3",
     "vue-router": "^4.3.3",
     "vue3-cookies": "^1.0.6"
   },
